Correct vertical centering of hero and CTA.
They were always vertically centered on screen. So, when the screen was
very tall, the overflowed to the US map. This makes them vertically
centered on the chimney video in tall screens.

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,7 +151,7 @@ body {
 }
 
 .hero {
-  height: 50%;
+  height: min(50%, 600px);
   display: flex;
   align-items: end;
   justify-content: center;
@@ -165,7 +165,7 @@ body {
 }
 
 .email {
-  height: 50%;
+  height: min(50%, 600px);
   display: flex;
   flex-direction: column;
   align-items: center;
